--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,7 +21,7 @@
 body { 
   margin: 0;
   padding: 0;
-  font-family: "PT Sans", 
+  font-family: "PT Sans"; 
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
@@ -37,7 +37,7 @@ a {
 }
 
 .visually-hidden {
- display: none;
+  display: none;
 }
 
 @import "blocks/main-nav.scss";
