--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,7 +6,7 @@
     local("PT Sans Regular"),
     url ("fonts/ptsans.woff") format("woff"),
     url ("fonts/ptsans.woff2") format("woff2");
-    font-weight: normal;
+    font-weight: 400;
 }
 
 @font-face {
@@ -15,13 +15,13 @@
     local("PT Sans Bold"),
     url ("fonts/ptsansbold.woff") format("woff"),
     url ("fonts/ptsansbold.woff2") format("woff2");
-    font-weight: bold;
+    font-weight: 500;
 }
 
-body { 
+body {
   margin: 0;
   padding: 0;
-  font-family: "PT Sans"; 
+  font-family: "PT Sans";
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
