--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -45,6 +45,11 @@
 }
 
 .form__info {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: none;
   background-color: #f2f2f2;
   border: none;
   padding-top: 16px;
@@ -61,6 +66,11 @@
 }
 
 .form__comment {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: none;
   background-color: #f2f2f2;
   border: none;
   padding-top: 16px;
