--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,8 @@
 @import "blocks/body.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/intro.scss";
-@import "blocks/main-page.scss";
+@import "blocks/advantages.scss";
+@import "blocks/search-hotel.scss";
 @import "blocks/footer.scss";
 @import "blocks/form.scss";
 @import "blocks/modal.scss";
