--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,11 +1,19 @@
 @import "normalize.scss";
-@import "blocks/body.scss";
+@import "blocks/base.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/intro.scss";
 @import "blocks/advantages.scss";
 @import "blocks/search-hotel.scss";
-@import "blocks/footer.scss";
+@import "blocks/page-footer.scss";
 @import "blocks/form.scss";
 @import "blocks/modal.scss";
 @import "blocks/photo.scss";
 @import "blocks/video.scss";
+@import "blocks/copyright.scss";
+@import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
+@import "blocks/photo-wrapper.scss";
+@import "blocks/site-list.scss";
+@import "blocks/social.scss";
+@import "blocks/button.scss";
+@import "/blocks/map.scss";
