--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,4 +16,4 @@
 @import "blocks/site-list.scss";
 @import "blocks/social.scss";
 @import "blocks/button.scss";
-@import "/blocks/map.scss";
+@import "blocks/map.scss";
