--- a/source/sass/blocks/base.scss
+++ b/source/sass/blocks/base.scss
@@ -36,3 +36,17 @@ a {
 .visually-hidden {
   display: none;
 }
+
+@media (min-width: 768px) {
+  body {
+    width: 768px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  body {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
