--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -20,3 +20,22 @@
   color: #333333;
   text-align: center;
 }
+
+@media (min-width: 768px) {
+  .modal__title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .modal--error {
+    width: 400px;
+    margin: 0 auto;
+    padding: 0 65px;
+  }
+
+  .modal--done {
+    width: 632px;
+    margin: 0 auto;
+    padding: 0 87px;
+  }
+}
