--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -15,3 +15,20 @@
 .page-footer__hashtag--margin-form {
   margin-top: 75px;
 }
+
+@media (min-width: 768px) {
+  .page-footer {
+    width: 648px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-footer {
+    width: 960px;
+    padding: 0 120px;
+    margin: 0 auto;
+  }
+}
