--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -15,3 +15,22 @@
   display: block;
   width: 100%;
 }
+
+@media (min-width: 768px) {
+  .site-list__item {
+    width: 20%;
+  }
+
+  .site-list__item:nth-child(2) {
+    margin-right: 20%;
+  }
+
+  .site-list__link {
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 700;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 30px 0;
+  }
+}
