--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -33,3 +33,18 @@
 .video__control-panel {
   padding: 0 20px;
 }
+
+@media (min-width: 768px) {
+  .video__wrapper-video {
+    width: 648px;
+    padding: 0 60px;
+
+  }
+}
+
+@media (min-width: 1200px) {
+  .video__wrapper-video {
+    width: 800px;
+    padding: 0 200px;
+  }
+}
