--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,12 +8,24 @@
   display: block;
   padding-top: 18px;
   padding-bottom: 19px;
-  width: 280px;
   margin: 0 auto;
-  margin-top: 27px;
-  margin-bottom: 50px;
+ 
 }
 
+.button:hover,
+.button:focus {
+  background-color: #669ec0;
+}
+
+.button:active {
+  background-color: #5496bd;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.form__button {
+  width: 280px;
+  margin-top: 51px;
+}
 .modal__button {
   font-size: 18px;
   line-height: 26px;
@@ -21,8 +33,27 @@
   color: #ffffff;
   border: none;
   text-transform: uppercase;
+  width: 280px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .modal__button--width--small {
   width: 180px;
+  margin-top: 25px;
+  margin-bottom: 34px;
+}
+
+@media (min-width: 768px) {
+  .search-hotel__button {
+    width: 450px;
+  }
+
+  .modal__button{
+    width: 458px;
+  }
+  .modal__button--width--small {
+  width: 272px;
+  
+}
 }
