--- a/source/sass/blocks/base.scss
+++ b/source/sass/blocks/base.scss
@@ -16,6 +16,17 @@
   font-weight: bold;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
 body {
   padding: 0;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -33,9 +44,21 @@ a {
   text-decoration: none;
 }
 
-.visually-hidden {
-  display: none;
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
+
 
 @media (min-width: 768px) {
   body {
