--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -2,6 +2,13 @@
   margin-top: 40px;
   margin-bottom: 24px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.copyright__logo {
+  width: 35px;
+  height: 35px;
 }
 
 .copyright__text {
@@ -9,4 +16,11 @@
   line-height: 26px;
   font-weight: 400;
   font-style: normal;
+  align-self: center;
+}
+
+@media (min-width: 768px) {
+  .copyright {
+    margin-top: 7px;
+  }
 }
