--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -9,6 +9,7 @@
   background-position: center;
   width: 100%;
   height: 388px;
+  position: relative;
 }
 
 .intro__header--form,
@@ -21,12 +22,31 @@
   height: 158px;
 }
 
+.intro__logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.intro__header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 26px;
+  background-image: url("../img/bg-intro-triangle-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
 .intro__title {
   margin: 0;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   color: #000000;
+  padding: 0 32px;
   padding-top: 42px;
   padding-bottom: 32px;
   text-align: center;
@@ -38,6 +58,7 @@
   line-height: 26px;
   font-weight: 400;
   color: #333333;
+  padding: 0 32px;
   padding-bottom: 44px;
   text-align: center;
 }
@@ -47,5 +68,70 @@
 }
 
 .intro-text--padding-photo {
+  padding: 0 24px;
   padding-bottom: 28px;
+
+}
+
+@media (min-width: 768px) {
+  .intro__title {
+    font-size: 21px;
+    padding: 0 148px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .intro__header {
+    background-color: #d5e7f1;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 388px;
+    position: relative;
+  }
+
+  .intro__header--photo,
+  .intro__header--form {
+    height: 290px;
+  }
+
+  .intro__header::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 57px;
+    background-image: url("../img/bg-intro-triangle-tablet.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
+
+  .intro-text--padding-photo {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro__header {
+    background-color: #d5e7f1;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 518px;
+    position: relative;
+  }
+
+  .intro__header::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 57px;
+    background-image: url("../img/bg-intro-triangle-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
 }
