--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,5 +1,6 @@
 .video {
   background-color: #ffffff;
+  margin-bottom: 144px;
 }
 
 .video__wrapper-text {
@@ -17,27 +18,147 @@
 }
 
 .video__text {
-  margin: 0;
+  margin: 0 auto;
   font-size: 14px;
   line-height: 24px;
   font-weight: 400;
   color: #333333;
   text-align: center;
   margin-top: 30px;
+  width: 252px;
 }
 
 .video__wrapper-video {
   margin-top: 36px;
+  position: relative;
 }
 
 .video__control-panel {
   padding: 0 20px;
+  width: 100%;
+  height: 44px;
+  position: absolute;
+  bottom: 8px;
+}
+
+.video__time-control {
+  background-color: rgba(0, 0, 0, 0.6);
+  padding-left: 22px;
+  padding-right: 22px;
+  padding-top: 22px;
+  height: 46px;
+  position: relative;
+}
+
+.video__toggle {
+  position: absolute;
+  top: 18px;
+  left: 58px;
+  border: none;
+  width: 9px;
+  height: 9px;
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 0;
+}
+
+.video__time-scale {
+  width: 100%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.video__function-control {
+  background-color: #f2f2f2;
+  height: 44px;
+}
+
+.video__replay {
+  margin-left: 23px;
+  margin-top: 11px;
+  width: 22px;
+  height: 22px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/icon-video-replay.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+.video__titles {
+  margin-left: 132px;
+  width: 32px;
+  height: 22px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/icon-video-subtitles.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+.video__full-window {
+  margin-left: 30px;
+  width: 20px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/icon-video-fullscreen.svg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
   .video__wrapper-video {
     width: 648px;
     padding: 0 60px;
+  }
+
+  .video__text {
+    width: 440px;
+  }
+
+  .video__control-panel {
+    padding: 0;
+    height: 92px;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+  .video__time-control {
+    background-color: transparent;
+    padding: 0;
+    padding-top: 45px;
+    width: 60%;
+    margin-left: 14%;
+  }
+
+  .video__toggle {
+    top: 41px;
+  }
+
+  .video__function-control {
+    background-color: transparent;
+    position: relative;
+  }
+  .video__replay {
+    position: absolute;
+    top: -25px;
+    margin-left: 6%;
+  }
+
+  .video__titles {
+    margin-left: 80%;
+    position: absolute;
+    top: -10px;
+  }
+
+  .video__full-window {
+    margin-left: 90%;
+    position: absolute;
+    top: -9px;
   }
 }
 
