--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -28,7 +28,7 @@
   bottom: 0;
   width: 100%;
   height: 3px;
-  box-shadow: inset 0px -2px 1px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 0 -2px 1px 0 rgba(0, 0, 0, 0.35);
 }
 
 .site-list__link:not(.site-list__link--active):hover,
