--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -192,7 +192,7 @@
   content: "";
   position: absolute;
   top: -14px;
-  left: 0px;
+  left: 0;
   width: 56px;
   height: 56px;
   background-color: #f2f2f2;
