--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,7 +1,7 @@
 .modal {
   background-color: #ffffff;
   padding: 0 20px;
-  box-shadow: 0 7px 15px 0px rgba(0, 1, 1, 0.15);
+  box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
 }
 
 .modal--error {
