--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -31,7 +31,7 @@
   content: "";
   position: absolute;
   top: 10px;
-  right: 0px;
+  right: 0;
   width: 23px;
   height: 4px;
   background-color: #ffffff;
