--- a/source/sass/blocks/search-hotel.scss
+++ b/source/sass/blocks/search-hotel.scss
@@ -67,7 +67,7 @@
     font-size: 30px;
   }
 
-  .search-hotel__button {
-    width: 450px;
+  .search-hotel .search-hotel__button {
+    width: 460px;
   }
 }
