--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -100,6 +100,20 @@
   text-transform: none;
 }
 
+.form__info:hover,
+.form__info:focus,
+.form__comment:hover,
+.form__comment:focus {
+  background-color: #e5e5e5;
+}
+
+.form__info:active,
+.form__comment:active {
+  background-color: #ffffff;
+  box-shadow: inset 0 0 0 4px #e5e5e5;
+  outline: none; 
+}
+
 .form__button {
   border: none;
   text-transform: uppercase;
